<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/halo_dek"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/pindah_activity"
        android:layout_marginTop="20dp"
        />
    <Button
        android:id="@+id/pindahData"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/data_di_sini"
        />
    <Button
        android:id="@+id/btn_parcel"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:text="@string/parcel"
        />
    <Button
        android:id="@+id/dial_number"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/dial_number"
        />
    <Button
        android:id="@+id/btn_finalResult"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/move_with_result"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:id="@+id/result"
        android:layout_width="300dp"
        android:layout_height="50sp"
        android:text="@string/result_from_activity"
        android:textSize="20sp"
        android:gravity="center"
        />
</LinearLayout>